Migrate code base to java 17 (#463)
* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17

* Code cleanups for java 17